<resources>
    <string name="app_name">AppMobile_flota</string>
    <string name="iniciar_sesi_n">INICIAR SESIÓN</string>
    <string name="olvidaste_tu_contrase_a">¿Olvidaste tu contraseña?</string>
    <string name="contrase_a">Contraseña</string>
    <string name="usuario_email">Usuario (Email)</string>
    <string name="logo_de_la_aplicaci_n">Logo de la aplicación</string>
    <string name="titulo_pedidos_repartidor">Pedidos de %1$s</string>
    <string name="enviar_reporte">ENVIAR REPORTE</string>
    <string name="cancelar">CANCELAR</string>
    <string name="descripci_n_detallada">Descripción detallada</string>
    <string name="seleccione_el_motivo">Seleccione el motivo:</string>
    <string name="reportar_incidencia">Reportar Incidencia</string>
    <string name="cancelar1">CANCELAR</string>
    <string name="enviar_reporte1">ENVIAR REPORTE</string>
    <string name="descripci_n_detallada1">Descripción detallada</string>
    <string name="motivo_de_la_incidencia1">Motivo de la incidencia:</string>
    <string name="reportar_incidencia1">Reportar Incidencia</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>

</resources>